# desmobapp-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.postman/: resources.yaml
alembic/: env.py
alembic/versions/: 20260325_0001_initial_schema.py  20260328_0002_favorite_venues.py  20260328_0003_password_reset_tokens.py
app/: main.py
app/api/: errors.py  router.py
app/api/dependencies/: auth.py
app/api/routes/: analytics.py  auth.py  availability.py  bookings.py  favorites.py  health.py  holds.py  notifications.py  payments.py  profile.py  space.py
app/core/: config.py  logging.py  permissions.py  security.py
app/db/: base.py  enums.py  mixins.py  session.py
app/db/models/: __init__.py  access.py  booking.py  notification.py  payment.py  (+1 more)
app/schemas/: analytics.py  auth.py  availability.py  booking.py  checkin.py  common.py  favorite.py  hold.py  notification.py  payment.py  security.py  space.py
app/scripts/: seed_demo.py  seed_rbac.py  seed_tariffs.py
app/services/: analytics.py  auth.py  availability.py  booking.py  checkin.py  favorite.py  hold.py  notification.py  payment.py  rbac.py  space.py
docs/: frontend_handoff.md  implemented_backend_features.md  manual_test_checklist.md  postman_collection.json  postman_environment.json  swagger.yaml
postman/environments/: Coworking Backend Local.environment.yaml
tests/: conftest.py  test_booking_flow.py  test_contract.py  test_p1.py  test_pre_admin_p2.py  test_space.py
(+22 files in other folders)
